Resource explorer endpoint init
