# GraphWebApi/wwwroot/OpenApi.yaml
@@ -604,6 +604,33 @@ paths:
           description: OK
           content:
             text/html: {}
+  /openapi/tree:
+    get:
+      tags:
+        - openapi.tree
+      summary: Microsoft Graph OpenAPI document tree view.
+      description: Get the Microsoft Graph API metadata CSDL document as an OpenAPIUrlTreeNode document.
+      operationId: openapi.tree.GetUrlTreeNode
+      parameters:
+        - name: graphVersions
+          in: query
+          schema:
+            type: string
+            default: v1.0
+          required: false
+          description: Comma separated list of the target Microsoft Graph API versions. # ?graphVersions=v1.0 / ?graphVersions=beta / ?graphVersions=v1.0,beta or graphVersions=* (for both)
+        - name: forceRefresh
+          in: query
+          schema:
+            type: boolean
+            default: false
+          required: false
+          description: Reload the OpenAPI document(s).
+      responses:
+        "200":
+          description: Simplified OpenAPI document(s) rendered as an OpenApiUrlTreeNode document.
+          content:
+            application/vnd.oai.openapi+json: {} # JSON
 components:
   schemas:
     sample:
